plugins {
    id 'application'
    id 'java'
    id 'groovy'
    id 'org.springframework.boot' version '2.1.6.RELEASE'
}

apply plugin: 'io.spring.dependency-management'

group = 'uk.co.kenfos'
version = '0.0.1-SNAPSHOT'
mainClassName = 'uk.co.kenfos.RoboticCleanerApp'
sourceCompatibility = '12'

repositories { 
    mavenCentral()
    jcenter()
}

dependencies {
    implementation 'io.vavr:vavr:0.10.0'
    implementation 'org.apache.commons:commons-lang3:3.9'
    implementation 'org.projectlombok:lombok:1.18.8'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    annotationProcessor 'org.projectlombok:lombok:1.18.8'

    testImplementation 'com.jayway.restassured:rest-assured:2.9.0'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'javax.xml.bind:jaxb-api:2.2.11'
    testImplementation 'junit:junit:4.12'
    testImplementation 'org.codehaus.groovy:groovy-all:2.5.7'
    testImplementation 'org.spockframework:spock-core:1.2-groovy-2.5'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

test {
    jvmArgs(['--enable-preview'])
}